<resources>
    <string name="app_name">Vectras VM Github</string>
    <string name="qemu_version" translatable="false">Stable</string>
    <string name="startvm">VM STARTED!</string>
    <string name="stopvm">VM STOPPED!</string>
    <string name="noproccesses">NO PROCCESSES!</string>
    <string name="unknownstate">UNKNOWN STATE!</string>
    <string name="qemu_console_head" translatable="false">compat_monitor1 console\nQemu monitor - type \'help\' for more information\n(qemu)</string>
    <string name="desktopInstructions">To use External Mouse:\n\tDisable Mouse Acceleration inside the Guest OS.\n\t\tFor DSL use command: xset m 1\n"\t\tFor Other OSes disable \"Enhance pointer Precision\" or choose Mouse \"usb-tablet\" from Vectras main options.\n\tPlug in or Pair your USB/Bluetooth Mouse and press OK\n\tMove your mouse pointer to all desktop sides to calibrate.\n"</string>
    <string name="navigation_drawer_open">Drawer open</string>
    <string name="navigation_drawer_close">Drawer close</string>
    <string name="address_caption">Address</string>
    <string name="reset">Reset</string>
    <string name="shutdown">Shut down</string>
    <string name="devices">Devices</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="help">Help</string>
    <string name="keyboard">Keyboard</string>
    <string name="name">name</string>
    <string name="size">size:</string>
    <string name="vectras_website">Vectras website</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="username">USERNAME</string>
    <string name="save">SAVE</string>
    <string name="memory_usage">Memory Usage</string>
    <string name="external_vnc">External VNC</string>
    <string name="display">Display</string>
    <string name="remove">Remove</string>
    <string name="view_logs">View logs</string>
    <string name="input_mode_hardware_mouse">Hardware Mouse Mode</string>
    <string name="rom_name">VM name</string>
    <string name="rom_drive_qcow2_img_etc">Drive (qcow2, img, etc…)</string>
    <string name="qemu_params">QEMU params</string>
    <string name="add">ADD</string>
    <string name="import_iso">Import ISO</string>
    <string name="importRom">Import ROM</string>
    <string name="mouse_mode">Mouse mode</string>
    <string name="export">Export</string>
    <string name="sign_out">Sign out</string>
    <string name="hdd1" translatable="false">HDD1</string>
    <string name="hdd2" translatable="false">HDD2</string>
    <string name="create_a_machine">Create a Machine</string>
    <string name="arrow_down">Down Arrow</string>
    <string name="arrow_left">Left Arrow</string>
    <string name="arrow_right">Right Arrow</string>
    <string name="arrow_up">Up Arrow</string>
    <string name="auto">Auto</string>
    <string name="center_mouse">Mouse @</string>
    <string name="close">Close</string>
    <string name="color_format_caption">Color Format</string>
    <string name="color_mode">Color Mode</string>
    <string name="connect_button">Connect</string>
    <string name="connection_caption">Connection</string>
    <string name="ctrl_alt_del" translatable="false">Ctrl-Alt-Del</string>
    <string name="delete_connection">Delete Connection</string>
    <string name="disconnect">Disconnect</string>
    <string name="export_settings">Export</string>
    <string name="export_settings_path">Export to file</string>
    <string name="enter_text">Send text</string>
    <string name="fit_to_screen">Fit to Screen</string>
    <string name="force_full_check">Force full-screen bitmap</string>
    <string name="import_export_settings">Import/Export Settings</string>
    <string name="import_settings">Import</string>
    <string name="import_settings_file_url">Import from file or URL</string>
    <string name="info">Info</string>
    <string name="input_mode">Input Mode</string>
    <string name="input_mode_fit_to_screen">No Pan; Trackball Mouse</string>
    <string name="input_mode_mouse">Mouse Pointer Control Mode</string>
    <string name="input_mode_panning">Desktop Panning Mode</string>
    <string name="input_mode_touchpad_pan_trackball_mouse">Touch Pan; Trackball Mouse</string>
    <string name="input_mode_dpad_pan_touchpad_mouse">Touch Mouse; D-Pad Pan</string>
    <string name="input_mode_touch_pan_zoom_mouse">Touch Mouse Pan and Zoom</string>
    <string name="input_mode_touchpad">Touchpad</string>
    <string name="keep_password_button">Keep</string>
    <string name="local_mouse_check">Local mouse pointer</string>
    <string name="mouse_follow_pan">Mouse follow pan</string>
    <string name="nickname_caption">Nickname</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="one_to_one" translatable="false">1:1</string>
    <string name="scaling">Scaling</string>
    <string name="scaling_zoomable">Zoomable</string>
    <string name="patreon">Patreon</string>
    <string name="terminal">Terminal</string>
    <string name="qemu" translatable="false">QEMU</string>
    <string name="vnc" translatable="false">VNC</string>
    <string name="killqemu">Kill QEMU</string>
    <string name="roms_store">Rom store</string>
    <string name="mini_tools">Mini tools</string>
    <string name="system">System</string>
    <string name="system_settings_description">Language, check for updates and files.</string>
    <string name="personalization_settings_description">Light, dark and dynamic color.</string>
    <string name="qemu_settings_description">Settings for the emulator.</string>
    <string name="memory_capacity_mb">Memory capacity (MB)</string>
    <string name="home">Home</string>
    <string name="system_monitor">System monitor</string>
    <string name="settings_for_vnc">Quality, refresh rate and external.</string>
    <string name="open_main_folder">Open main folder</string>
    <string name="theme">Theme</string>
    <string name="import_and_export">Import &amp; export</string>
    <string name="import_and_export_description">Settings for importing and exporting roms.</string>
    <string name="X11_display">X11 display</string>
    <string name="settings_for_X11_display">Settings for X11 display.</string>
    <string name="software_and_driver">Software &amp; driver</string>
    <string name="defaulttext">Default</string>
    <string name="processor">Processor</string>
    <string name="board">Board</string>
    <string name="cores">Cores</string>
    <string name="threads">Threads</string>
    <string name="battery">Battery</string>
    <string name="machine_type">Machine type</string>
    <string name="nested_virtualization">Nested virtualization</string>
    <string name="pick">Pick</string>
    <string name="settings_x11_display_resolution_mode">Display resolution mode</string>
    <string name="settings_x11_display_scale">Display scale, %</string>
    <string name="settings_x11_display_resolution">Display resolution</string>
    <string name="settings_x11_reseed_screen_title">Reseed screen while soft keyboard is open</string>
    <string name="settings_x11_reseed_screen_summary">The screen size will be adjusted while Soft Keyboard is open.</string>
    <string name="settings_x11_pip_title">PIP</string>
    <string name="settings_x11_pip_summary">Show app in picture-in-picture mode when home button or recents button is pressed</string>
    <string name="settings_x11_full_screen_title">Fullscreen on device display</string>
    <string name="settings_x11_full_screen_summary">Toggles immersive mode in your device display</string>
    <string name="settings_x11_cutout">Hide display cutout (if any)</string>
    <string name="settings_x11_keep_screen_on">Keep Screen On</string>
    <string name="settings_x11_stretch">Stretch to fit display</string>
    <string name="settings_x11_touchscreen_input_mode">Touchscreen input mode</string>
    <string name="settings_x11_display_scale_factor_to_touchpad">Apply display scale factor to touchpad</string>
    <string name="settings_x11_stylus_option_title">Show stylus click options</string>
    <string name="settings_x11_stylus_option_summary">Stylus touch override, left middle or right click (Only for the stylus)</string>
    <string name="settings_x11_mouse_overlay_title">Show mouse click helper overlay</string>
    <string name="settings_x11_mouse_overlay_summary">Onscreen mouse buttons usable with touchpad</string>
    <string name="settings_x11_capture_mouse_title">Capture external mouse when possible</string>
    <string name="settings_x11_capture_mouse_summary">Intercept all hardware mouse events. Pointer is back to Android after pressing Escape key.</string>
    <string name="settings_x11_capture_pointer_move">Transform captured pointer movements</string>
    <string name="settings_x11_capture_pointer_move_factor">Captured pointer speed factor, %</string>
    <string name="settings_x11_tap_to_move">Enable tap-to-move for touchpads</string>
    <string name="settings_x11_back_toggle">Toggle keyboard using back key</string>
    <string name="settings_x11_ext_keyboard_title">Show additional keyboard</string>
    <string name="settiongs_capture_volkey">Capture volume keys</string>
    <string name="settings_x11_hide_extkey_vol">Hide additional keyboard on Volume Down key press</string>
    <string name="settings_x11_deact_speckey_title">Deactivate special keys on additional key bar after each keypress</string>
    <string name="settings_x11_ime_with_hardkeyboard_title">Show IME with external keyboard</string>
    <string name="settings_x11_prefer_scancode_title">Prefer scancodes when possible</string>
    <string name="settings_x11_prefer_scancode_summary">Let X server handle hardware keyboard layout (with DE settings or setxkbmap).</string>
    <string name="settings_x11_fix_hard_keyboard_scancode_title">Hardware keyboard scancodes workaround</string>
    <string name="settings_x11_fix_hard_keyboard_scancode_summary">Fixes scancodes on some devices. Might cause problems with multiple layouts.</string>
    <string name="settings_x11_capture_shortcut_manually_title">Enable Accessibility service for intercepting system shortcuts manually.</string>
    <string name="settings_x11_capture_shortcut_manually_summary">Open Accessibility settings.</string>
    <string name="settings_x11_intercepting_esc">Pause key intercepting with Esc key</string>
    <string name="settings_x11_opacity_extra_keys_bar">Opacity of extra keys bar, %</string>
    <string name="settings_extra_keys_config">Extra keys config</string>
    <string name="settings_clipboard_sharing">Clipboard sharing</string>
    <string name="settings_x11_adjust_display_title">Adjust display height for extra keys bar</string>
    <string name="settings_x11_adjust_display_summary">May cause screen flickering during toggling EK bar</string>
    <string name="settings_x11_ext_keyboard_summary">Show keyboard with additional keys.</string>
    <string name="settings_x11_ime_with_hardkeyboard_summary">Show software keyboard while hardware keyboard is connected. Requires WRITE_SECURE_SETTINGS permission.</string>
    <string name="settings_x11_auto_intercept_shortcut_title">Enable Accessibility service for intercepting system shortcuts automatically.</string>
    <string name="settings_x11_auto_intercept_shortcut_summary">Requires WRITE_SECURE_SETTINGS permission.</string>
    <string name="settings_x11_ignore_win_key_title">Filter out intercepted Win (Meta/Mod4) key.</string>
    <string name="settings_x11_ignore_win_key_summary">Allows you to use Dex shortcuts while intercepting.</string>
    <string name="settings_x11_deact_speckey_summary">Use long-tap to lock special keys</string>
    <string name="settings_tag_output">Output</string>
    <string name="settings_tag_point">Pointer</string>
    <string name="settings_tag_keyboard">Keyboard</string>
    <string name="settings_tag_other">Other</string>
</resources>