<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="output"
        android:title="@string/settings_tag_output">
        <ListPreference
            android:defaultValue="native"
            android:entries="@array/displayResolutionVariants"
            android:entryValues="@array/displayResolutionVariants"
            android:key="displayResolutionMode"
            android:title="@string/settings_x11_display_resolution_mode" />

        <SeekBarPreference
            android:defaultValue="100"
            android:key="displayScale"
            android:max="200"
            android:title="@string/settings_x11_display_scale" />

        <ListPreference
            android:defaultValue="1280x1024"
            android:entries="@array/displayResolution"
            android:entryValues="@array/displayResolution"
            android:key="displayResolutionExact"
            android:title="@string/settings_x11_display_resolution" />

        <EditTextPreference
            android:defaultValue="1280x1024"
            android:key="displayResolutionCustom"
            android:summary="Example: 1280x1024"
            android:title="@string/settings_x11_display_resolution" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="displayStretch"
            android:title="@string/settings_x11_stretch" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="Reseed"
            android:summary="@string/settings_x11_reseed_screen_summary"
            android:title="@string/settings_x11_reseed_screen_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="PIP"
            android:summary="@string/settings_x11_pip_summary"
            android:title="@string/settings_x11_pip_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="fullscreen"
            android:summary="@string/settings_x11_full_screen_summary"
            android:title="@string/settings_x11_full_screen_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="forceLandscape"
            android:title="Force landscape orientation"
            app:isPreferenceVisible="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="hideCutout"
            android:title="@string/settings_x11_cutout" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="keepScreenOn"
            android:title="@string/settings_x11_keep_screen_on" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="adjustHeightForEK"
            android:summary="@string/settings_x11_adjust_display_summary"
            android:title="@string/settings_x11_adjust_display_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pointer"
        android:title="@string/settings_tag_point">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/touchscreenInputModesEntries"
            android:entryValues="@array/touchscreenInputModesValues"
            android:key="touchMode"
            android:title="@string/settings_x11_touchscreen_input_mode" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="scaleTouchpad"
            android:title="@string/settings_x11_display_scale_factor_to_touchpad" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="showStylusClickOverride"
            android:summary="@string/settings_x11_stylus_option_summary"
            android:title="@string/settings_x11_stylus_option_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="showMouseHelper"
            android:summary="@string/settings_x11_mouse_overlay_summary"
            android:title="@string/settings_x11_mouse_overlay_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pointerCapture"
            android:summary="@string/settings_x11_capture_mouse_summary"
            android:title="@string/settings_x11_capture_mouse_title" />

        <ListPreference
            android:defaultValue="no"
            android:entries="@array/transformCapturedPointerEntries"
            android:entryValues="@array/transformCapturedPointerValues"
            android:key="transformCapturedPointer"
            android:title="@string/settings_x11_capture_pointer_move" />

        <SeekBarPreference
            android:defaultValue="100"
            android:key="capturedPointerSpeedFactor"
            android:max="200"
            android:title="@string/settings_x11_capture_pointer_move_factor" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="tapToMove"
            android:title="@string/settings_x11_tap_to_move" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="kbd"
        android:title="@string/settings_tag_keyboard">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="toggleIMEUsingBackKey"
            android:title="@string/settings_x11_back_toggle"
            app:isPreferenceVisible="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="showAdditionalKbd"
            android:summary="@string/settings_x11_ext_keyboard_summary"
            android:title="@string/settings_x11_ext_keyboard_title"
            app:isPreferenceVisible="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="captureVolumeKeys"
            android:title="@string/settiongs_capture_volkey" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="hideEKOnVolDown"
            android:title="@string/settings_x11_hide_extkey_vol"
            app:isPreferenceVisible="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="useTermuxEKBarBehaviour"
            android:summary="@string/settings_x11_deact_speckey_summary"
            android:title="@string/settings_x11_deact_speckey_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="showIMEWhileExternalConnected"
            android:summary="@string/settings_x11_ime_with_hardkeyboard_summary"
            android:title="@string/settings_x11_ime_with_hardkeyboard_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="preferScancodes"
            android:summary="@string/settings_x11_prefer_scancode_summary"
            android:title="@string/settings_x11_prefer_scancode_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="hardwareKbdScancodesWorkaround"
            android:summary="@string/settings_x11_fix_hard_keyboard_scancode_summary"
            android:title="@string/settings_x11_fix_hard_keyboard_scancode_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="dexMetaKeyCapture"
            android:summary="@string/settings_x11_full_screen_summary"
            android:title="@string/settings_x11_full_screen_title" />

        <Preference
            android:key="enableAccessibilityService"
            android:summary="@string/settings_x11_capture_shortcut_manually_summary"
            android:title="@string/settings_x11_capture_shortcut_manually_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="enableAccessibilityServiceAutomatically"
            android:summary="@string/settings_x11_auto_intercept_shortcut_summary"
            android:title="@string/settings_x11_auto_intercept_shortcut_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pauseKeyInterceptingWithEsc"
            android:title="@string/settings_x11_intercepting_esc" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="filterOutWinkey"
            android:summary="@string/settings_x11_ignore_win_key_summary"
            android:title="@string/settings_x11_ignore_win_key_title" />

        <SeekBarPreference
            android:defaultValue="100"
            android:key="opacityEKBar"
            android:max="100"
            android:title="@string/settings_x11_opacity_extra_keys_bar"
            app:isPreferenceVisible="false" />

        <Preference
            android:key="extra_keys_config"
            android:title="@string/settings_extra_keys_config"
            app:isPreferenceVisible="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="other"
        android:title="@string/settings_tag_other">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="clipboardEnable"
            android:title="@string/settings_clipboard_sharing" />

        <Preference
            android:key="requestNotificationPermission"
            android:title="Request notification permission" />
    </PreferenceCategory>
</PreferenceScreen>
