<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_item_desktop"
        android:icon="@drawable/desktop_24px"
        android:title="@string/X11_display"/>
    <item
        android:id="@+id/navigation_item_terminal"
        android:icon="@drawable/terminal_24px"
        android:title="@string/terminal"/>
    <item
        android:id="@+id/navigation_item_view_logs"
        android:icon="@drawable/overview_24px"
        android:title="@string/view_logs" />
    <item
        android:id="@+id/navigation_item_settings"
        android:icon="@drawable/settings_24px"
        android:title="@string/settings"/>
    <item
        android:id="@+id/mini_tools"
        android:icon="@drawable/home_repair_service_24px"
        android:title="@string/mini_tools"/>
    <item
        android:id="@+id/navigation_data_explorer"
        android:icon="@drawable/folder_24px"
        android:title="@string/open_main_folder"/>
    <item
        android:id="@+id/navigation_item_website"
        android:icon="@drawable/language_24px"
        android:title="@string/vectras_website" />
    <item
        android:id="@+id/navigation_item_donate"
        android:icon="@drawable/patreon_outline_225"
        android:title="@string/patreon"/>
    <item
        android:id="@+id/navigation_item_help"
        android:icon="@drawable/help_24px"
        android:title="@string/help"/>
    <item
        android:id="@+id/navigation_item_info"
        android:icon="@drawable/info_24px"
        android:title="@string/about"/>

</menu>
