<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:visible="false" android:id="@+id/itemScaling" android:title="@string/scaling">
        <menu>
                <item android:id="@+id/itemZoomable" android:title="@string/scaling_zoomable"/>
                <item android:id="@+id/itemOneToOne" android:title="@string/one_to_one"/>
                <item android:id="@+id/itemZoomIn" android:title="@string/zoom_in"/>
                <item android:id="@+id/itemZoomOut" android:title="@string/zoom_out"/>
                <item android:id="@+id/itemFitToScreen" android:title="@string/fit_to_screen"/>
                <item android:id="@+id/itemStretchToScreen" android:title="@string/stretch_to_screen"/>
        </menu>
    </item>
    <item  android:id="@+id/shutdownItem"
        android:title="@string/shutdown"
        android:icon="@drawable/round_logout_24" />
</menu>

