<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/shutdown"
        android:icon="@drawable/power_settings_new_24px"
        android:title="@string/killqemu"
        android:contentDescription="@string/killqemu"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/backtothedisplay"
        android:icon="@drawable/desktop_windows_24px"
        android:title="@string/display"
        android:contentDescription="@string/display"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/importrom"
        android:icon="@drawable/publish_24px"
        android:title="@string/importRom"
        android:contentDescription="@string/importRom"
        app:showAsAction="ifRoom"/>
</menu>