<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fadeScrollbars="true"
        android:requiresFadingEdge="vertical"
        android:fadingEdgeLength="48dp">

        <LinearLayout
            android:id="@+id/ln_all_options"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:paddingBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                style="@style/MaterialAlertDialog.Material3Expressive.Title.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/board" />

            <com.vectras.vm.view.SelectBoxView
                android:id="@+id/sbv_machine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:title="@string/machine_type"
                app:subtitle="@string/defaulttext"
                android:background="@drawable/object_shape_single_high"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp" />

            <com.vectras.vm.view.SelectBoxView
                android:id="@+id/sbv_cpu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:title="@string/processor"
                app:subtitle="@string/defaulttext"
                android:background="@drawable/object_shape_top_high"/>

            <com.vectras.vm.view.SelectBoxView
                android:id="@+id/sbv_core"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:title="@string/cores"
                app:subtitle="@string/defaulttext"
                android:background="@drawable/object_shape_middle_high"/>

            <com.vectras.vm.view.SelectBoxView
                android:id="@+id/sbv_thread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/threads"
                app:subtitle="@string/defaulttext"
                android:background="@drawable/object_shape_middle_high"/>

            <com.vectras.vm.view.CheckBoxView
                android:id="@+id/cbv_nested_virtualization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:setText="@string/nested_virtualization"
                android:background="@drawable/object_shape_bottom_high"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cpi_memory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/memory_capacity_mb"
                app:endIconContentDescription="@string/pick"
                app:endIconDrawable="@drawable/keyboard_arrow_down_24px"
                app:endIconMode="custom"
                android:theme="@style/AppTheme.TextInput"
                app:startIconDrawable="@drawable/memory_alt_24px">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_memory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp" />

            <com.vectras.vm.view.CheckBoxView
                android:id="@+id/cbv_battery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:setText="@string/battery"
                android:background="@drawable/object_shape_single_high"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>